--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,6 +9,6 @@ search: false
 @import "minimal-mistakes"; // main partials
 
 .site-title {
-      margin-left: 0;
-      font-size: $type-size-1;
+      margin-left: 2em;
+      font-size: $type-size-2;
     }
