set title size and left margin

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,13 @@ search: false
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-.site-title {
-      margin-left: 10em;
-      font-size: $type-size-2;
+.greedy-nav {
+
+  a {
+
+    &.site-title {
+      margin-left: 0.5rem;
+      font-size: $type-size-3;
     }
+  }
+}
