--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,6 +15,7 @@ search: false
     &.site-title {
       margin-left: 0.5rem;
       font-size: $type-size-3;
+      font-family: serif;
     }
   }
 }
