--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -29,6 +29,11 @@ h6 {
   margin: 3em 0 1em;
 }
 
+.page__content h2 {
+    padding-top: 0.5em;
+    padding-left: 0.5em;
+}
+
 h2 {
   background-color: rgba(130,113,83,1);
 }
