--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,3 +37,8 @@ h6 {
 h2 {
   background-color: #8271533d;
 }
+
+// add shadow for img in section
+section img {
+    box-shadow: 0px 0px 15px #ccc;
+}
